assets/sass/_header.scss
$header-height: 5rem;

header {
  width: 100%;
  overflow: hidden;
  line-height: $header-height;
  @media screen and (min-width: $breakpoint-03) {
    margin-bottom: 1rem;
  }
}

nav {
  width: 100%;
  z-index: 1000;
  background-color: $bgColor;

  li {
    list-style: none;
  }

  // mobile
  @media screen and (max-width: $breakpoint-03) {
    li {
      float: left;
      text-align: left;

      // disable mobile nav by default except for brandicon and burger menu
      &:not(:first-child, :last-child) {
        display: none;
      }

      &#burger-menu {
        float: right;
      }

      & > a,
      & > #lang-picker > a {
        display: block;
        width: 100%;

        & > img {
          width: auto;
          height: 3.5rem;
        }
      }

      & > a,
      & > .social-icons > a > i,
      & > #lang-picker > a > img {
        padding: 1rem;
        line-height: 2rem;
      }
    }

    &.responsive-visible {
      position: fixed;

      li {
        float: none;

        &:not(:first-child) {
          height: 4rem;
        }

        &,
        & > * {
          display: block;
        }

        &:nth-child(2n) {
          background-color: rgba($primaryColor, $alpha: 0.3);
        }

        &#burger-menu {
          position: fixed;
          right: 0;
          top: 0;
        }
      }
    }
  }

  // desktop
  @media screen and (min-width: $breakpoint-03) {
    li {
      vertical-align: middle;

      &:not(:nth-last-child(-n + 3)) {
        float: left;
      }
      &:nth-last-child(-n + 3) {
        float: right;
      }

      &#burger-menu {
        display: none;
      }

      & > a {
        display: inline-block;

        &.active {
          color: $primaryColor;
        }
      }

      & > * {
        padding: 0.1rem 1rem;
        height: 1.5rem;
        width: 100%;
      }

      & > #lang-picker > a > img {
        height: 1.1rem;
      }
    }
  }
}

#nav-brand {
  display: inline-block;
  line-height: $header-height;

  & > * {
    display: inline;
    line-height: $header-height;
    vertical-align: middle;
  }
  & > p {
    font-size: 1.5rem;
  }

  & > img {
    height: $header-height;
    width: auto;
    padding: 0.5rem 0.5rem;
  }
}

#burger-button {
  height: $header-height;
  width: $header-height;
  outline: none;
  border: none;
  padding: 2.5rem 1rem 2rem 1rem;
  font-size: 1.6rem;
  background-color: $bgColor;

  &:hover {
    color: $primaryColor;
  }
}

